로그인, 회원가입 기능 구현중(sha256 복호화 완료)..

--- a/worksB/src/main/webapp/resources/css/home.css
+++ b/worksB/src/main/webapp/resources/css/home.css
@@ -1,5 +1,8 @@
 @import "root.css";
 
+body {
+  background-color: #fff;
+}
 
 .index-header {
   height: 60px;
@@ -8,10 +11,13 @@
   align-items: center;
 }
 
-.index-header img {
+.index-header a {
   max-width: 100%;
-  max-height: 50%;
   padding-left: 50px;
+}
+
+.index-header img {
+  width: 40px;
 }
 
 .index-header div{
