--- a/worksB/src/main/webapp/resources/css/projectHeader.css
+++ b/worksB/src/main/webapp/resources/css/projectHeader.css
@@ -1,10 +1,17 @@
 @import "root.css";
+
+.project__header {
+    margin: 0 auto;
+    width: 100%;
+    background-color: aliceblue;
+}
+
 .project__nav {
     list-style: none;
-    width: 300px;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    margin-left: 80px;
 }
 
 .project__nav a {
@@ -15,50 +22,31 @@
     font-size: 16px;
 }
 
-.project__header {
-    margin: 0 auto;
-    width: 1000px;
-}
-
-header {
-    width: 1200px;
-    height: 90px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: aliceblue;
-}
-
-
 .project__nav li {
-    font-size:20px;
+    font-size: 20px;
     height: 100%;
     display: flex;
     align-items: center;
-}
-
-.project__title{
-    color: var(--color-dark-grey);
-    font-weight: var(--weight-bold);
-    font-size: 25px;
+    margin-right: 20px;
 }
 
 .project__nav a:hover {
     color: #303030;
 }
 
-.project__menu{
+.project__menu {
     width: 800px;
     margin-bottom: 15px;
+    margin-left: 80px;
 }
 
 .fa-regular {
     margin-right: 10px;
 }
 
-.project__setting{
+.project__setting {
     width: 180px;
-    height: 180px;
+    height: 190px;
     position: absolute;
     display: none;
     margin-right: 300px;
@@ -79,5 +67,10 @@ header {
 .project__setting li:hover{
     background-color: var(--color-light-blue);
     color: #303030;
+}
+
+span{
+	font-size: 25px;
+	margin-left: 20px;
 }
 
