--- a/worksB/src/main/webapp/resources/css/projectHeader.css
+++ b/worksB/src/main/webapp/resources/css/projectHeader.css
@@ -44,30 +44,6 @@
     margin-right: 10px;
 }
 
-.project__setting {
-    width: 180px;
-    height: 190px;
-    position: absolute;
-    display: none;
-    margin-right: 300px;
-    border: 1px solid var(--color-light-grey);
-    border-radius: var(--size-border-radius);
-    background-color: white;
-    font-size: 13px;
-    z-index: 1;
-}
-
-.project__setting li{
-    font-size: 16px;
-    color: var(--color-dark-grey);
-    margin: 15px;
-    padding: 2px;
-}
-
-.project__setting li:hover{
-    background-color: var(--color-light-blue);
-    color: #303030;
-}
 
 span{
 	font-size: 25px;
@@ -82,18 +58,28 @@ span{
     left:0;
     width:100%;
     height:100%;
-    background-color: rgba(0,0,0,0.4);
 }
 
 .modal_body{
     position:absolute;
-    top:30%;
-    width:300px;
-    height:150px;
-    padding:40px;  
-    text-align: center;
+    top:20%;
+    left:15%;
+    width: 180px;
+    height: 190px; 
     background-color: rgb(255,255,255);
     border-radius:10px;
     box-shadow:0 2px 3px 0 rgba(34,36,38,0.15);
     transform:translateY(-50%);
+}
+
+.modal li{
+    font-size: 16px;
+    color: var(--color-dark-grey);
+    margin: 15px;
+    padding: 2px;
+}
+
+.modal li:hover{
+    background-color: var(--color-light-blue);
+    color: #303030;
 }
