--- a/worksB/src/main/webapp/resources/css/projectHeader.css
+++ b/worksB/src/main/webapp/resources/css/projectHeader.css
@@ -1,5 +1,5 @@
 @import "root.css";
-
+/*
 .project__header {
     margin: 0 auto;
     width: 100%;
@@ -83,3 +83,4 @@ span{
     background-color: var(--color-light-blue);
     color: #303030;
 }
+*/
