--- a/worksB/src/main/webapp/resources/css/main.css
+++ b/worksB/src/main/webapp/resources/css/main.css
@@ -21,13 +21,12 @@ body {
 }
 
 .header__search {
-  width: 350px;
   height: 30px;
   border-radius: 15px;
   border: 1px solid var(--color-dark-white);
   padding: 0 15px;
   padding-left: 50px;
-  background-image: url(/img/search-icon.png);
+  background-image: url(../img/search-icon.png);
   background-repeat: no-repeat;
   background-size: 20px;
   background-position: 15px;
