--- a/worksB/src/main/webapp/resources/css/main.css
+++ b/worksB/src/main/webapp/resources/css/main.css
@@ -17,7 +17,8 @@ body {
 
 .header__logo {
   display: block;
-  width: 140px;
+  width : 100px;
+  height: 25px; 
 }
 
 .header__search {
@@ -35,6 +36,7 @@ body {
 
 .header__icon{
   display: flex;
+  position: relative;
 }
 
 .header__icon a{
@@ -54,6 +56,43 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 20%;
+}
+
+/* modal */
+#profile-modal {
+	position: absolute;
+	width: 150px;
+	height: 140px;
+	right: 35px;
+	top: 30px;
+	background-color: var(--color-white);
+	border-radius: 5px;
+	border: 1px solid var(--color-black);
+	padding: 10px 15px;
+	font-size: 12px;
+	display: none;
+	transition: all ease 2s;
+}
+
+.modal-logo {
+	width: 30%;
+	margin-right: 20px;
+	border-radius: 10px;
+}
+
+.profile-modal__title {
+	display: flex;
+	height: 50px;
+	align-items: center;
+	margin-bottom: 10px;
+}
+
+#profile-modal p {
+	margin-top: 5px;
+}
+
+.modal-visible {
+	display: block !important;
 }
 
 /* side */
