--- a/worksB/src/main/webapp/resources/css/main.css
+++ b/worksB/src/main/webapp/resources/css/main.css
@@ -36,7 +36,6 @@ body {
 
 .header__icon{
   display: flex;
-  position: relative;
 }
 
 .header__icon a{
@@ -61,21 +60,29 @@ body {
 /* modal */
 #profile-modal {
 	position: absolute;
-	width: 150px;
-	height: 140px;
-	right: 35px;
-	top: 30px;
-	background-color: var(--color-white);
-	border-radius: 5px;
-	border: 1px solid var(--color-black);
-	padding: 10px 15px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.1);
 	font-size: 12px;
 	display: none;
-	transition: all ease 2s;
+	left: 0;
+	top: 0;
+}
+
+.profile-modal__content {
+	position: absolute;
+	width: 10%;
+	height: 21%;
+	right: 5%;
+	top: 7%;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 10px;
+	padding: 5px 15px;
 }
 
 .modal-logo {
-	width: 30%;
+	width: 25%;
 	margin-right: 20px;
 	border-radius: 10px;
 }
