--- a/worksB/src/main/webapp/resources/css/login.css
+++ b/worksB/src/main/webapp/resources/css/login.css
@@ -70,7 +70,7 @@ input:-webkit-autofill:active {
 	align-items: center;
 }
 
-#autoLogin {
+#remember-me {
 	display: inline-block;
 	width: 15px;
 	height: 15px;
