--- a/worksB/src/main/webapp/resources/css/main.css
+++ b/worksB/src/main/webapp/resources/css/main.css
@@ -115,12 +115,40 @@ body {
 .my-profile-modal__content {
 	position: absolute;
 	background-color: white;
-	width: 30%;
-	height: 30%;
+	width: 20%;
+	height: 80%;
 	top:50%;
 	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 5px;
 }
 
+.my-profile-modal__content {
+	text-align: center;
+}
+
+.my-profile-logo {
+	width: 100%;
+	height: 20%;
+	max-height: 20%;
+}
+
+.my-profile-item {
+	display: flex;
+	padding: 3% 6%;
+	justify-content: space-between;
+}
+
+.my-profile__btn {
+	background-color: rgb(174, 213, 245);
+	width: 80%;
+	height: 50px;
+	text-align: center;
+	color: white;
+	font-weight: var(--weight-bold);
+	font-size: var(--font-regular);
+	border-radius: 5px;
+}
 
 .modal-visible {
 	display: block !important;
