--- a/worksB/src/main/webapp/resources/css/main.css
+++ b/worksB/src/main/webapp/resources/css/main.css
@@ -116,7 +116,7 @@ body {
 }
 
 .my-profile-logo {
-	width: 80%;
+	width: 85%;
 	height: 270px;
 	max-height: 20%;
 	border-radius: 5px;
@@ -157,20 +157,50 @@ body {
 	width: 20%;
 	background-color: white;
 	font-size: 12px;
-	padding: 0 15px;
+	padding: 20px 15px;
+	border: 1px solid var(--color-dark-white);
 }
 
 .alarm__title {
 	font-size: 15px;
-	
+	justify-content: space-between;
+	font-weight: var(--weight-bold);
 }
 
-.alarm_search-icon {
+.cursor {
+	cursor: pointer;
+}
+
+.alarm_search-input {
 	display: block;
-	width: 97%;
+	width: 83%;
 	height: 30px;
-	border: 1px solid black;
+	border: 1px solid var(--color-dark-white);
 	border-radius: 5px;
+	background-image: url(../icon/search-icon.png);
+	background-repeat: no-repeat;
+	background-size: 20px;
+  	background-position: 15px;
+  	padding: 0 15px;
+  	padding-left: 50px;
+}	
+
+.alarm__subtitle {
+	align-items: center;
+	justify-content: space-between;
+}
+
+.alarm__subtitle__item {
+	padding: 10px 5px;
+}
+
+.alarm-category {
+	justify-content: center;
+}
+
+.category-list {
+	display: inline-block;
+	padding: 10px;
 }
 
 .modal-visible {
@@ -179,7 +209,6 @@ body {
 
 .flex {
 	display: flex;
-	justify-content: space-between;
 }
 
 /* side */
