--- a/worksB/src/main/webapp/resources/css/home.css
+++ b/worksB/src/main/webapp/resources/css/home.css
@@ -106,7 +106,7 @@ body {
   font-size: var(--font-regular);
   font-weight: var(--weight-bold);
   margin: auto;
-  background-color: var(--color-beigie);
+  background-color: var(--color-dark-red);
   margin-top: 30px;
 }
 
