--- a/worksB/src/main/webapp/resources/css/projectList.css
+++ b/worksB/src/main/webapp/resources/css/projectList.css
@@ -1,102 +1,58 @@
-@import "root.css";
-
-.colored-icon{
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    display: inline-block;
-    border-radius: 3px;
-}
-h4{
-    display: inline-block;
+.icon {
+	width: 30px;
+	height: 30px;
 }
 
-.fa-globe{
-    text-align: right;
-}
-.fa-user{
-    width:30px;
-}
-.fa-bars, .fa-microsoft{
-    float: right;
-    width: 80px;
+.icons {
+	
 }
 
-.sort-icons {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    height: 50px;
-
+.tiled, .list {
+	float: right;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
-.project-main{
-    display: inline-flex;
-    border-radius: 18px;
-    background-color: #fffae0;
-    width: 300px;
-    height: 150px;
-    margin-bottom: 20px;
-    margin-left: 10px;
+.tiled {
+	margin-right: 70px;
 }
 
-.bar{
-    border-top-left-radius: 13px;
-    border-bottom-left-radius: 13px;
-    background-color: black;
-    width: 20px;
-    height: 150px;
-    float: left;
-    margin-right: 10px;
+.block {
+	margin-left: 50px;
 }
 
-.project__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.create-project-list-view {
+	width: 230px;
+	background-color: #9fdbf5;
+	height: 82px;
+	border-radius: 30px;
+	text-align: center;
+	position: absolute;
+	bottom: 81%;
+	left: 70%;
+	line-height: 80px;
 }
 
-.select-box{
-    display: block;
-    margin-bottom: 20px;
+.unread-project {
+	border-radius: 50px;
+	display: inline-block;
+	background-color: red;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	color: white;
+	margin-left: 30px;
 }
 
-.unread-project{
-    border-radius: 50px;
-    display: inline-block;
-    background-color: red;
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    color: white;
-    margin-left: 30px;
-}
-.create-project-list-view{
-    width: 260px;
-    background-color: #9fdbf5;
-    height: 100px;
-    border-radius: 30px;
-    text-align: center;
-    position: absolute;
-    bottom: 87%;
-    left: 76%;
-    line-height: 100px;
+.selected-status {
+	display: inline-block;
 }
 
-.create-project-tiled-view{
-    width: 260px;
-    background-color: #9fdbf5;
-    height: 100px;
-    border-radius: 30px;
-    text-align: center;
-    position: absolute;
-    bottom: 79%;
-    left: 76%;
-    line-height: 100px;
+.none-visible {
+	display: none;
 }
-.colored-star{
-    color: #ffd43b;
-}
-.empty-star{
-    color: #394521;
+
+.visible {
+	display: block;
 }
