--- a/worksB/src/main/webapp/resources/css/projectList.css
+++ b/worksB/src/main/webapp/resources/css/projectList.css
@@ -1,58 +1,83 @@
-.icon {
-	width: 30px;
-	height: 30px;
+.prj-title {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 30px;
+	margin: 30px 0;
+}
+
+.prj-title h1 {
+	margin: 0;
+	color: var(--color-dark-grey);
+	font-size: var(--font-regular);
 }
 
 .icons {
-	
+	display: flex;
+	align-items: center;
+	padding-right: 100px;
 }
 
-.tiled, .list {
-	float: right;
-	margin-left: 20px;
-	margin-right: 20px;
+.icons a {
+	height: 35px;
 }
 
-.tiled {
-	margin-right: 70px;
+.icon {
+	width : 20px;
+	height : 20px;
+	margin-left: 30px;
+	margin: 0 10px;
+	display: inline-block;
+	cursor: pointer;
 }
 
-.block {
-	margin-left: 50px;
+.list-box {
+	width: 70%;
+	margin: 20px auto;	
+	font-size: 18px; 
+	font-weight: var(--weight-semi-bold);
 }
 
-.create-project-list-view {
-	width: 230px;
-	background-color: #9fdbf5;
-	height: 82px;
-	border-radius: 30px;
-	text-align: center;
-	position: absolute;
-	bottom: 81%;
-	left: 70%;
-	line-height: 80px;
+.list-title {
+	font-size: var(--font-small); 
+	font-weight: var(--weight-bold);
+}
+
+.list {
+	position:relative;
+	padding: 10px 40px;
+	margin: 5px 0;
+	border-radius: 5px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: rgb(253, 252, 220, 0.2);
+}
+
+.project-name {
+	margin-right: 50px;
+	height: 30px;
+	line-height: 30px;
+	display: flex;
+	align-items: center;
+}
+
+.project-info {
+	display: flex;
+	align-items: center;
+	margin-right: 80px;
 }
 
 .unread-project {
+	position: absolute;
 	border-radius: 50px;
-	display: inline-block;
-	background-color: red;
-	width: 30px;
-	height: 30px;
-	line-height: 30px;
+	background-color: var(--color-dark-red);
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
 	text-align: center;
 	color: white;
-	margin-left: 30px;
-}
-
-.selected-status {
-	display: inline-block;
-}
-
-.none-visible {
-	display: none;
-}
-
-.visible {
-	display: block;
+	top: -5px;
+	left: 15px;
+	font-size: var(--font-micro);
 }
