--- a/worksB/src/main/webapp/resources/css/root.css
+++ b/worksB/src/main/webapp/resources/css/root.css
@@ -44,6 +44,10 @@
   box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body{
   margin: 0px;
   font-family: 'Noto Sans KR', sans-serif;
