--- a/worksB/src/main/webapp/resources/css/login.css
+++ b/worksB/src/main/webapp/resources/css/login.css
@@ -88,3 +88,125 @@ input:-webkit-autofill:active {
 	margin: 0 10px 0 0;
 	outline: none;
 }
+
+#searchPw-modal, #updatePw-modal {
+	position: absolute;
+	width: 100%;
+	height: 110%;
+	background-color: rgba(0,0,0,0.1);
+	font-size: 12px;
+	display: none;
+	left: 0;
+	top: 0;
+	z-index: 4;
+}
+
+.searchPw-modal-content, .updatePw-modal-content {
+	position: absolute;
+	background-color: white;
+	width: 40%;
+	height: 30%;
+	top:40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 10px;
+	text-align: center;
+	padding: 30px 0 15px 0;
+	color: var(--color-dark-grey);
+	border: 1px solid var(--color-dark-beigie);
+}
+
+.searchPw-modal-title, .updatePw-modal-title {
+	display: flex;
+	align-items: center;
+	padding: 10px 30px;
+	justify-content: space-between;
+	font-size: var(--font-regular);
+	font-weight: var(--weight-bold);
+}
+
+.searchPw-modal-info, .CertificationNumber, 
+.updatePw-modal-info, .updatePw-modal-check {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 70px;
+	justify-content: flex-start;
+	font-size: var(--font-small);
+	font-weight: var(--weight-bold);
+}
+
+.searchPw-modal-info input,
+.updatePw-modal-info input {
+	width: 55%;	
+	height: 40px;
+	margin: 0 15px;
+	border: 1px solid var(--color-dark-beigie);
+	border-radius: 5px; 
+	padding: 0 20px;
+}
+
+.CertificationNumber input,
+.updatePw-modal-check input {
+	width: 70%;	
+	height: 40px;
+	margin: 0 15px;
+	border: 1px solid var(--color-dark-beigie);
+	border-radius: 5px; 
+	padding: 0 20px;
+}
+
+.searchPw-modal-info button {
+	width: 100px;
+	height: 40px;
+	background-color: var(--color-dark-red);
+	border-radius: 5px;
+	color: var(--color-white);
+	font-weight: var(--weight-bold);
+	transition: all 0.5s;
+}
+
+.searchPw-modal-content button[type=reset],
+#updatePw-modal button[type=reset]{
+	width: 100px;
+	height: 40px;
+	background-color: var(--color-white);
+	border-radius: 5px;
+	color: var(--color-dark-red);
+	font-weight: var(--weight-bold);
+	border: 1px solid var(--color-dark-red);
+	margin-right: 10px;
+}
+
+.searchPw-modal-content button[type=button],
+#updatePw-modal button[type=button] {
+	width: 100px;
+	height: 40px;
+	background-color: var(--color-dark-red);
+	border-radius: 5px;
+	color: var(--color-white);
+	font-weight: var(--weight-bold);
+	margin-left: 10px;
+	transition: all 0.5s;
+}
+
+img[name=removeModal] {
+	padding: 5px 10px;
+	cursor: pointer;
+}
+
+.searchPw-modal-content button[type=button]:hover, 
+.searchPw-modal-info button:hover,
+#updatePw-modal button[type=button]:hover {
+	background-color: var(--color-white);
+	color: var(--color-dark-red);
+	border: 1px solid var(--color-dark-red);
+}
+
+#newPw::placeholder {
+	color : var(--color-dark-red);
+}
+
+.d-b {
+	display: block !important;
+}
