--- a/worksB/src/main/webapp/resources/css/root.css
+++ b/worksB/src/main/webapp/resources/css/root.css
@@ -14,6 +14,7 @@
   --color-light-blue: #00afb9;
   --color-green: #9CBB3A;
   --color-orange: #F9A634;
+  --color-light-beigie: rgb(253, 252, 220, 0.1);
   --color-beigie: rgb(253, 252, 220, 0.6);
   --color-dark-beigie: rgb(254, 217, 183, 0.5);
   --color-light-red: rgb(240, 113, 103, 0.5);
