--- a/worksB/src/main/webapp/resources/css/main.css
+++ b/worksB/src/main/webapp/resources/css/main.css
@@ -378,3 +378,13 @@ body {
   bottom: 0;
   width: 100%;
 }
+
+.employee .state {
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	bottom: 0;
+	right: 0;
+	z-index: 2;
+}
